fixed layout issue

--- a/src/styles/projectDetails.css
+++ b/src/styles/projectDetails.css
@@ -83,7 +83,8 @@ body {
   background: #fbf6f6;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-top: 6rem;
-  height: 53rem;
+  height: auto;
+  padding-bottom: 2rem;
 }
 
 .p-over {
